Styled+routed artwork section on home page and added more styling stuff.

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -1,6 +1,14 @@
-destination:
-  ../dist
-
 collections:
   artwork:
     output: true
+
+destination:
+  ../dist
+
+defaults:
+  - scope:
+      path: ""
+      type: "artwork"
+    values:
+      thumbnail: true
+      layout: "artwork"
