Added data for Whitney. Also fixed weird labeling for when there's missing images.

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -15,5 +15,5 @@ defaults:
       path: ""
       type: "artwork"
     values:
-      thumbnail: true
+      missing-images: false
       layout: "artwork"
